# python

./: conftest.py  forslavetesting  jenkinsfile  pyproject.toml  requirements.txt  sonar-project.properties  sonar.properties
.github/workflows/: python-app.yml
sonar/: sonar-project.properties
src/: calculator.py
tests/: test_calculator.py
